--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 impact at a high growth company.</p>
             </div>
             <div class="col-lg-4">
-              <img class="profile-img grey-img mt-4" src="https://avatars.githubusercontent.com/u/36159742?s=400&u=a0d6964f4001157f55b0c941dbefb238b13c8711&v=4" alt="Imad Ahmed">
+              <img class="profile-img grey-img mt-4" src="https://pbs.twimg.com/profile_images/1411458611507728385/-ECPKlBM_400x400.jpg" alt="Imad Ahmed">
             </div>
           </div>
         </div>
