--- a/index.html
+++ b/index.html
@@ -138,20 +138,26 @@
         <!-- <div class="card mt-3 mb-5"> -->
         <div class="row">
           <div class="col-lg-4 bg-card-2 m-0 p-0">
+            <a href="https://kids.code.in">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
               <img height="62" class="grey-img" src="https://i.imgur.com/gvGLCGy.png">
             </div>
+            </a>
           </div>
           <div class="col-lg-4 text-center">
+            <a href="https://cs.code.in">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
               <img height="62" class="grey-img"
                 src="https://res.cloudinary.com/dhznnpvlm/image/upload/c_scale,w_250/v1613830252/cs-code-in/Wof2mhd_yjup9q.png">
             </div>
+            </a>
           </div>
           <div class="col-lg-4 bg-card-2 m-0 p-0">
+            <a href="https://bootcamps.code.in">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
               <img height="62" class="grey-img" src="https://bootcamp.code.in/static/media/bootcamp-dark.b72d8e30.png">
             </div>
+            </a>
           </div>
 
         </div>
@@ -160,19 +166,25 @@
         <!-- <div class="card mt-3 mb-5"> -->
         <div class="row">
           <div class="col-lg-4 m-0 p-0">
+            <a href="https://schoolofcoding.in">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
               <img height="120" class="grey-img" src="https://i.imgur.com/ICWk8Qf.png">
             </div>
+            </a>
           </div>
           <div class="col-lg-4 bg-card-2 m-0 p-0">
+            <a href="https://studio.code.in">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
               <img height="62" class="grey-img" src="https://studio.code.in/static/media/studio-dark.01e0cc1a.png">
             </div>
+            </a>
           </div>
           <div class="col-lg-4 m-0 p-0">
+            <a href="https://thehackingschool.com">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
               <img height="100" class="grey-img" src="https://i.imgur.com/EKxlhyS.png">
             </div>
+            </a>
           </div>
         </div>
         <!-- </div> -->
@@ -181,19 +193,24 @@
         <div class="row">
           <div class="col-lg-4 m-0 p-0  bg-card-2 m-0 p-0 grey-img">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <a href="https://email.code.in">
               <img height="62" src="https://i.imgur.com/vIsrGaf.png">
+              </a>
             </div>
           </div>
           <div class="col-lg-4">
+            <a href="https://notifyfy.com">
             <div class="text-center mt-5 pt-5 mb-5 pb-5 grey-img">
               <img height="62" src="https://notifyfy.com/uploads/logo/6cf04b818865676c66bd7ab5c3e3f7bf.png">
             </div>
+            </a>
           </div>
           <div class="col-lg-4 m-0 p-0  bg-card-2 m-0 p-0 grey-img">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <a href="https://codingfactory.edu.au">
               <img height="100" src="https://codingfactory.edu.au/static/media/cfwhite.c37f4c7a.png">
-
-            </div>
+              </a>
+             </div>
           </div>
 
         </div>
