--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </a>
           </div>
           <div class="col-lg-4 bg-card-2 m-0 p-0">
-            <a href="https://bootcamps.code.in">
+            <a href="https://bootcamp.code.in">
             <div class="text-center mt-5 pt-5 mb-5 pb-5">
               <img height="62" class="grey-img" src="https://bootcamp.code.in/static/media/bootcamp-dark.b72d8e30.png">
             </div>
